--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.26",
+    "expo": "^51.0.0",
     "expo-document-picker": "^12.0.2",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
@@ -36,7 +36,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
-    "typescript": "^5.3.3"
+    "typescript": "^5.5.3"
   },
   "private": true
 }
