--- a/package.json
+++ b/package.json
@@ -8,34 +8,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.8.3",
     "@react-native-community/blur": "^4.4.1",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.0",
-    "expo-camera": "~15.0.15",
-    "expo-document-picker": "^12.0.2",
-    "expo-face-detector": "~12.7.1",
-    "expo-media-library": "~16.0.4",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "^3.0.7",
+    "expo": "^52.0.42",
+    "expo-camera": "~16.0.18",
+    "expo-dev-client": "~5.0.19",
+    "expo-document-picker": "~13.0.3",
+    "expo-face-detector": "~13.0.2",
+    "expo-location": "~18.0.10",
+    "expo-media-library": "~17.0.6",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
     "moment": "^2.30.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    
+    "react": "18.3.1",
+    "react-native": "0.76.8",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-pressable-opacity": "^1.0.10",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.5.0",
@@ -45,7 +48,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.5.3"
